--- a/docs/custom.css
+++ b/docs/custom.css
@@ -1,5 +1,5 @@
 .md-typeset :not(pre) > code {
-    background-color: #f0f0f0; /* Light grey background, change as needed */
+    background-color: #f2e5e5; /* Light grey background, change as needed */
     color: #333333; /* Dark grey text, change as needed */
     padding: 0.2em 0.4em; /* Adjust padding to suit your design */
     border-radius: 3px; /* Rounded corners for a smoother look */
